Archive2/b1/29d7b8e8384f16/output
main.cpp:3:1: error: unterminated comment
 /* what_if this happens
 ^
