Archive2/b1/29d7b8e8384f16/main.cpp
#define what_if */

/* what_if this happens

int main(int argc, char* argv[])
{
    return 0;
}
